force-app/main/default/objects/AVO_Meter_Codeset__c/AVO_Meter_Codeset__c.object-meta.xml
<CustomObject>
    <label>Meter Codeset</label>
    <nameField>
        <label>Meter Codeset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meter Codesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>