force-app/main/default/objects/AVO_Meter_Codeset__c/fields/AVO_Battery_Replacement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>AVO_Battery_Replacement_Frequency__c</fullName>
    <label>Battery Replacement Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>