force-app/main/default/objects/AVO_Meter_Codeset__c/fields/AVO_Make_Code__c.field-meta.xml
<CustomField>
    <fullName>AVO_Make_Code__c</fullName>
    <label>Make Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>