force-app/main/default/objects/AVO_Meter_Codeset__c/fields/AVO_Make_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Make_ID__c</fullName>
    <externalId>true</externalId>
    <label>Make ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>