force-app/main/default/objects/AVO_Meter_Codeset__c/fields/AVO_Meter_Make__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Make</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must look up to a Meter Make.</errorMessage>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Type__c</field>
            <operation>equals</operation>
            <value>Meter Make</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>Meter Models</relationshipLabel>
    <relationshipName>Meter_Models</relationshipName>
    <type>Lookup</type>
</CustomField>