force-app/main/default/objects/AVO_Meter_Codeset__c/recordTypes/Meter_Make.recordType-meta.xml
<RecordType>
    <fullName>Meter_Make</fullName>
    <active>true</active>
    <label>Meter Make</label>
</RecordType>