force-app/main/default/objects/AVO_Meter_Codeset__c/recordTypes/Meter_Model.recordType-meta.xml
<RecordType>
    <fullName>Meter_Model</fullName>
    <active>true</active>
    <label>Meter Model</label>
</RecordType>