force-app/main/default/objects/AVO_Meter_Codeset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AVO_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>