force-app/main/default/objects/AVO_Meter_Codeset__c/listViews/Meter_Makes.listView-meta.xml
<ListView>
    <fullName>Meter_Makes</fullName>
    <columns>NAME</columns>
    <columns>AVO_Make_ID__c</columns>
    <columns>AVO_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>Meter Make</value>
    </filters>
    <label>Meter Makes</label>
</ListView>