force-app/main/default/objects/AVO_Meter_Codeset__c/listViews/Meter_Models.listView-meta.xml
<ListView>
    <fullName>Meter_Models</fullName>
    <columns>NAME</columns>
    <columns>AVO_Make_ID__c</columns>
    <columns>AVO_Make_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>Meter Model</value>
    </filters>
    <label>Meter Models</label>
</ListView>